--- a/index.html
+++ b/index.html
@@ -90,82 +90,89 @@
 </head>
 <body>
 
-  <!-- ====================== ASO / SEO TEXT AT TOP (ADDED) ====================== -->
-  <main class="seo-copy" id="top-info">
-    <h1>Anamorphic De-Squeeze Tool Online — Web Desqueeze Studio</h1>
+  <!-- ===================== TOP ASO/SEO + TOOLS (NO style.css change) ===================== -->
+  <section id="top-aso"
+           style="max-width:1200px;margin:18px auto 0;padding:0 1.5rem;color:var(--muted);line-height:1.6;">
+    <div style="background:rgba(255,255,255,0.06);border:1px solid rgba(255,255,255,0.10);border-radius:16px;padding:14px 16px;">
+      <div style="color:#fff;font-weight:800;font-size:1.15rem;margin:0 0 6px 0;">
+        Anamorphic De-Squeeze Tool Online — Web Desqueeze Studio
+      </div>
 
-    <h2>What is anamorphic de-squeeze and why fix distortion?</h2>
-    <p>
-      <strong>Anamorphic lenses</strong> squeeze the image horizontally to capture a wider field of view on a normal sensor.
-      This unique look is popular with professional filmmakers and those utilizing affordable <strong>mobile anamorphic lenses</strong>
-      (like those from Moment, Sirui, or Moondog Labs) on their iPhone or Android devices.
-      Without de-squeezing, footage looks tall and skinny. This <strong>online anamorphic de-squeeze tool</strong> fixes the
-      <span translate="no">anamorphic distortion</span>, stretching the footage back to its intended <strong>cinematic aspect ratio</strong>
-      (e.g., 2.39:1) so your shots look professional instead of stretched.
-    </p>
+      <div style="color:#fff;font-weight:700;margin-top:10px;">What is anamorphic de-squeeze and why fix distortion?</div>
+      <div>
+        <strong>Anamorphic lenses</strong> squeeze the image horizontally to capture a wider field of view on a normal sensor.
+        This unique look is popular with professional filmmakers and those utilizing affordable <strong>mobile anamorphic lenses</strong>
+        (like those from Moment, Sirui, or Moondog Labs) on their iPhone or Android devices. Without de-squeezing, footage looks tall and skinny.
+        This <strong>online anamorphic de-squeeze tool</strong> fixes the anamorphic distortion, stretching the footage back to its intended
+        <strong>cinematic aspect ratio</strong> (e.g., 2.39:1) so your shots look professional instead of stretched.
+      </div>
 
-    <h2>How to De-Squeeze Photos and Videos Online (Batch Processing)</h2>
-    <p>
-      Our web studio makes it easy to use this <strong>anamorphic video editor online</strong>, right in your browser, no downloads required.
-      We support <strong>batch processing</strong> of up to 10 files at once for efficiency. It's the perfect
-      <span translate="no">anamorphic aspect ratio converter</span> for quick edits.
-    </p>
+      <div style="color:#fff;font-weight:700;margin-top:10px;">How to De-Squeeze Photos and Videos Online (Batch Processing)</div>
+      <div>
+        Our web studio makes it easy to use this <strong>anamorphic video editor online</strong>, right in your browser, no downloads required.
+        We support <strong>batch processing</strong> of up to 10 files at once for efficiency. It's the perfect anamorphic aspect ratio converter
+        for quick edits.
+      </div>
 
-    <h3>Supported Formats &amp; Key Features:</h3>
-    <ul>
-      <li>Preview horizontal de-squeeze in real-time.</li>
-      <li>Export fully corrected MP4, JPG, and PNG files.</li>
-      <li>Batch process up to 10 files simultaneously.</li>
-      <li>Manual input for various squeeze factors (1.33x, 1.55x, 2.0x). Use this to ensure your 1.33x anamorphic de-squeeze is perfect.</li>
-    </ul>
-  </main>
-
-  <!-- ====================== TOOLS SECTION AT TOP (ADDED) ====================== -->
-  <section id="tools" class="seo-copy">
-    <h2>Our Tools</h2>
-
-    <p>
-      DeSqueeze Studio provides a complete suite of professional anamorphic de-squeeze tools designed for filmmakers, cinematographers, and creative studios.
-      Our platform delivers accurate, high-quality lens correction across Web, iOS, and Android, ensuring consistent results on every device.
-    </p>
-
-    <p>
-      Whether you are processing still images or high-resolution video, DeSqueeze Studio supports industry-standard anamorphic lens factors including 1.33x, 1.5x, 1.8x, and 2.0x.
-      Export pristine MP4, JPG, and PNG files with efficient batch workflows built for modern production pipelines.
-    </p>
-
-    <ul>
-      <li>
-        <strong>Web Studio:</strong>
-        Browser-based anamorphic de-squeeze with fast uploads and batch processing.
-        <a href="https://anamorphic-desqueeze.com/" target="_blank" rel="noopener">Launch Web Studio</a>
-      </li>
-
-      <li>
-        <strong>iOS App:</strong>
-        Professional de-squeeze tools optimized for iPhone and iPad workflows.
-        <a href="https://apps.apple.com/za/app/anamorphicdesqueezer/id6757354068" target="_blank" rel="noopener">Download on the App Store</a>
-      </li>
-
-      <li>
-        <strong>Android Apps:</strong>
-        Powerful mobile solutions available on Google Play for real-time and post-production use.
-        <a href="https://play.google.com/store/apps/details?id=com.squeezer.app" target="_blank" rel="noopener">Get DeSqueeze Studio</a>
-        |
-        <a href="https://play.google.com/store/apps/details?id=com.cinematiclens.desqueeze.live" target="_blank" rel="noopener">Get Cinematic Lens DeSqueeze</a>
-      </li>
-
-      <li>
-        <strong>Community & Updates:</strong>
-        Follow DeSqueeze Studio for product updates, feature releases, and filmmaking tips.
-        <a href="https://www.facebook.com/profile.php?id=61582013559827" target="_blank" rel="noopener">Visit our Facebook Page</a>
-      </li>
-    </ul>
-
-    <p>
-      DeSqueeze Studio is available with free early access and is continuously evolving to meet the demands of professional cinematic production.
-    </p>
+      <div style="color:#fff;font-weight:700;margin-top:10px;">Supported Formats &amp; Key Features:</div>
+      <ul style="margin:6px 0 0 18px;">
+        <li>Preview horizontal de-squeeze in real-time.</li>
+        <li>Export fully corrected MP4, JPG, and PNG files.</li>
+        <li>Batch process up to 10 files simultaneously.</li>
+        <li>Manual input for various squeeze factors (1.33x, 1.55x, 2.0x). Use this to ensure your 1.33x anamorphic de-squeeze is perfect.</li>
+      </ul>
+    </div>
   </section>
+
+  <section id="tools"
+           style="max-width:1200px;margin:14px auto 0;padding:0 1.5rem;color:var(--muted);line-height:1.6;">
+    <div style="background:rgba(255,255,255,0.06);border:1px solid rgba(255,255,255,0.10);border-radius:16px;padding:14px 16px;">
+      <h2 style="margin:0;color:#fff;font-size:1.2rem;">Our Tools</h2>
+
+      <p style="margin:10px 0 0;">
+        DeSqueeze Studio provides a complete suite of professional anamorphic de-squeeze tools designed for filmmakers, cinematographers, and creative studios.
+        Our platform delivers accurate, high-quality lens correction across Web, iOS, and Android, ensuring consistent results on every device.
+      </p>
+
+      <p style="margin:10px 0 0;">
+        Whether you are processing still images or high-resolution video, DeSqueeze Studio supports industry-standard anamorphic lens factors including 1.33x, 1.5x, 1.8x, and 2.0x.
+        Export pristine MP4, JPG, and PNG files with efficient batch workflows built for modern production pipelines.
+      </p>
+
+      <ul style="margin:10px 0 0 18px;">
+        <li>
+          <strong style="color:#fff;">Web Studio:</strong>
+          Browser-based anamorphic de-squeeze with fast uploads and batch processing.
+          <a href="https://anamorphic-desqueeze.com/" target="_blank" rel="noopener" style="color:#93c5fd;">Launch Web Studio</a>
+        </li>
+
+        <li style="margin-top:6px;">
+          <strong style="color:#fff;">iOS App:</strong>
+          Professional de-squeeze tools optimized for iPhone and iPad workflows.
+          <a href="https://apps.apple.com/za/app/anamorphicdesqueezer/id6757354068" target="_blank" rel="noopener" style="color:#93c5fd;">Download on the App Store</a>
+        </li>
+
+        <li style="margin-top:6px;">
+          <strong style="color:#fff;">Android Apps:</strong>
+          Powerful mobile solutions available on Google Play for real-time and post-production use.
+          <a href="https://play.google.com/store/apps/details?id=com.squeezer.app" target="_blank" rel="noopener" style="color:#93c5fd;">Get DeSqueeze Studio</a>
+          |
+          <a href="https://play.google.com/store/apps/details?id=com.cinematiclens.desqueeze.live" target="_blank" rel="noopener" style="color:#93c5fd;">Get Cinematic Lens DeSqueeze</a>
+        </li>
+
+        <li style="margin-top:6px;">
+          <strong style="color:#fff;">Community & Updates:</strong>
+          Follow DeSqueeze Studio for product updates, feature releases, and filmmaking tips.
+          <a href="https://www.facebook.com/profile.php?id=61582013559827" target="_blank" rel="noopener" style="color:#93c5fd;">Visit our Facebook Page</a>
+        </li>
+      </ul>
+
+      <p style="margin:10px 0 0;">
+        DeSqueeze Studio is available with free early access and is continuously evolving to meet the demands of professional cinematic production.
+      </p>
+    </div>
+  </section>
+  <!-- ===================== END TOP ASO/SEO + TOOLS ===================== -->
 
   <!-- Header -->
   <header class="site-header">
@@ -196,13 +203,13 @@
       <!-- Monitor -->
       <section class="panel monitor">
         <div class="preview" id="previewBox">
-			   <video
-		  id="video"
-		  playsinline
-		  controls
-		  preload="metadata"
-		  poster="preview.jpg"
-		></video>
+          <video
+            id="video"
+            playsinline
+            controls
+            preload="metadata"
+            poster="preview.jpg"
+          ></video>
           <canvas id="photoCanvas" class="hidden"></canvas>
         </div>
 
@@ -226,38 +233,38 @@
       </section>
 
       <!-- Settings -->
-    <section class="panel" id="settings">
+      <section class="panel" id="settings">
 
-  <div class="row">
-    <label>Files</label>
-    <div>
-      <small>Coming soon — seamless and secure file uploads to Amazon S3.</small>
-    </div>
-  </div>
+        <div class="row">
+          <label>Files</label>
+          <div>
+            <small>Coming soon — seamless and secure file uploads to Amazon S3.</small>
+          </div>
+        </div>
 
-  <h2>Settings</h2>
+        <h2>Settings</h2>
 
-  <div class="row">
-    <label>Select Files</label>
-    <div>
-      <div style="display:flex; gap:8px; align-items:center; flex-wrap:wrap;">
-        <button id="clearAll" type="button" class="btn">Clear</button>
+        <div class="row">
+          <label>Select Files</label>
+          <div>
+            <div style="display:flex; gap:8px; align-items:center; flex-wrap:wrap;">
+              <button id="clearAll" type="button" class="btn">Clear</button>
 
-        <input
-          id="fileInput"
-          type="file"
-          accept="video/*,image/*,.mts,.avi,.mov,.mp4,.png,.jpg,.jpeg"
-          multiple
-        />
-      </div>
+              <input
+                id="fileInput"
+                type="file"
+                accept="video/*,image/*,.mts,.avi,.mov,.mp4,.png,.jpg,.jpeg"
+                multiple
+              />
+            </div>
 
-      <small>
-        You may select up to 10 files. (Per-file size limit: 1 MB to 5 MB for testing.)  
-        For larger file processing, please contact us at
-        <a href="mailto:teamcentersap@gmail.com">teamcentersap@gmail.com</a>.
-      </small>
-    </div>
-  </div>
+            <small>
+              You may select up to 10 files. (Per-file size limit: 1 MB to 5 MB for testing.)
+              For larger file processing, please contact us at
+              <a href="mailto:teamcentersap@gmail.com">teamcentersap@gmail.com</a>.
+            </small>
+          </div>
+        </div>
 
         <div class="row">
           <label>De-squeeze</label>
@@ -316,7 +323,7 @@
         <div class="row" style="display:none">
           <label>Upload URL</label>
           <!--  <input id="uploadUrl" type="text" value="https://api.anamorphic-desqueeze.com/upload" />-->
-		   <input id="uploadUrl" type="text" value="https://desqueeze-server-render.onrender.com/upload" />
+          <input id="uploadUrl" type="text" value="https://desqueeze-server-render.onrender.com/upload" />
         </div>
       </section>
 
