Add Google Ads script to index.html

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     gtag('js', new Date());
     gtag('config', 'G-6BFDRLKVZK');
   </script>
+    <script async
+    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6348292037303976"
+    crossorigin="anonymous">
+  </script>
 
   <link rel="stylesheet" href="./style.css?v=3" />
 
