--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <link rel="canonical" href="https://anamorphic-desqueeze.com/" />
   <meta name="robots" content="index,follow" />
 
+  <!-- ✅ AdSense account verification (required by Google in many setups) -->
+  <meta name="google-adsense-account" content="ca-pub-6348292037303976" />
+
   <!-- GA4 -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-6BFDRLKVZK"></script>
   <script>
@@ -20,11 +23,10 @@
     gtag('config', 'G-6BFDRLKVZK');
   </script>
 
-  <!-- Google AdSense (loader - keep only once) -->
+  <!-- ✅ Google AdSense (loader - keep only once) -->
   <script async
     src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6348292037303976"
-    crossorigin="anonymous">
-  </script>
+    crossorigin="anonymous"></script>
 
   <link rel="stylesheet" href="./style.css?v=3" />
 
@@ -159,25 +161,6 @@
         z-index: 20;
       }
     }
-
-    /* ===================== AdSense slots (safe, non-invasive) ===================== */
-    .adsense-wrap{
-      max-width:1200px;
-      margin:14px auto 0;
-      padding:0 1.5rem;
-    }
-    .adsense-card{
-      background: rgba(255,255,255,0.06);
-      border: 1px solid rgba(255,255,255,0.10);
-      border-radius: 16px;
-      padding: 10px 12px;
-    }
-    .adsense-label{
-      color: rgba(255,255,255,0.55);
-      font-size: 0.8rem;
-      margin: 0 0 6px 4px;
-    }
-    /* ===================================================================== */
   </style>
 </head>
 <body>
@@ -263,20 +246,6 @@
     </div>
   </section>
 
-  <!-- ===================== AdSense Slot #1 (safe placement) ===================== -->
-  <section class="adsense-wrap" aria-label="Advertisement">
-    <div class="adsense-card">
-      <div class="adsense-label">Advertisement</div>
-      <!-- Responsive Ad Unit -->
-      <ins class="adsbygoogle"
-           style="display:block"
-           data-ad-client="ca-pub-6348292037303976"
-           data-ad-slot="1234567890"
-           data-ad-format="auto"
-           data-full-width-responsive="true"></ins>
-    </div>
-  </section>
-
   <!-- ===================== HOUSE ADS (ALWAYS VISIBLE, NO OVERLAP) ===================== -->
   <div id="house-ads" aria-label="Promotions">
     <div id="house-ad-left" class="house-ad">
@@ -329,13 +298,7 @@
       <!-- Monitor -->
       <section class="panel monitor">
         <div class="preview" id="previewBox">
-          <video
-            id="video"
-            playsinline
-            controls
-            preload="metadata"
-            poster="preview.jpg"
-          ></video>
+          <video id="video" playsinline controls preload="metadata" poster="preview.jpg"></video>
           <canvas id="photoCanvas" class="hidden"></canvas>
         </div>
 
@@ -360,12 +323,9 @@
 
       <!-- Settings -->
       <section class="panel" id="settings">
-
         <div class="row">
           <label>Files</label>
-          <div>
-            <small>Coming soon — seamless and secure file uploads to Amazon S3.</small>
-          </div>
+          <div><small>Coming soon — seamless and secure file uploads to Amazon S3.</small></div>
         </div>
 
         <h2>Settings</h2>
@@ -375,13 +335,8 @@
           <div>
             <div style="display:flex; gap:8px; align-items:center; flex-wrap:wrap;">
               <button id="clearAll" type="button" class="btn">Clear</button>
-
-              <input
-                id="fileInput"
-                type="file"
-                accept="video/*,image/*,.mts,.avi,.mov,.mp4,.png,.jpg,.jpeg"
-                multiple
-              />
+              <input id="fileInput" type="file"
+                accept="video/*,image/*,.mts,.avi,.mov,.mp4,.png,.jpg,.jpeg" multiple />
             </div>
 
             <small>
@@ -445,15 +400,13 @@
           </div>
         </div>
 
-        <!-- Backend URL (hidden) -->
         <div class="row" style="display:none">
           <label>Upload URL</label>
-          <!--  <input id="uploadUrl" type="text" value="https://api.anamorphic-desqueeze.com/upload" />-->
           <input id="uploadUrl" type="text" value="https://desqueeze-server-render.onrender.com/upload" />
         </div>
       </section>
 
-      <!-- Pro (now just "Advanced features" text, all free) -->
+      <!-- Pro -->
       <section class="panel" id="pro">
         <h2>Advanced Features (Currently Free)</h2>
         <div class="row">
@@ -489,13 +442,9 @@
     </main>
   </div>
 
-  <!-- SEO-Optimized Content Block for Anamorphic De-Squeeze Studio -->
   <main class="seo-copy" id="how-it-works">
-
-    <!-- Primary H1 tag clearly defines the page's main purpose -->
     <h1>Anamorphic De-Squeeze Tool Online — Web Desqueeze Studio</h1>
 
-    <!-- H2 to address the user's initial question (informational intent) -->
     <h2>What is anamorphic de-squeeze and why fix distortion?</h2>
     <p>
       <strong>Anamorphic lenses</strong> squeeze the image horizontally to capture a wider field of view on a normal sensor.
@@ -506,37 +455,20 @@
       (e.g., 2.39:1) so your shots look professional instead of stretched.
     </p>
 
-    <!-- H2 to guide users on how to use the tool (transactional intent) -->
     <h2>How to De-Squeeze Photos and Videos Online (Batch Processing)</h2>
     <p>
       Our web studio makes it easy to use this <strong>anamorphic video editor online</strong>, right in your browser, no downloads required.
-      We support <strong>batch processing</strong> of up to 10 files at once for efficiency. It's the perfect
-      <span translate="no">anamorphic aspect ratio converter</span> for quick edits.
+      We support <strong>batch processing</strong> of up to 10 files at once for efficiency.
     </p>
 
-    <!-- H3 to detail key features and formats -->
     <h3>Supported Formats & Key Features:</h3>
     <ul>
       <li>Preview horizontal de-squeeze in real-time.</li>
       <li>Export fully corrected MP4, JPG, and PNG files.</li>
       <li>Batch process up to 10 files simultaneously.</li>
-      <li>Manual input for various squeeze factors (1.33x, 1.55x, 2.0x). Use this to ensure your 1.33x anamorphic de-squeeze is perfect.</li>
+      <li>Manual input for various squeeze factors (1.33x, 1.55x, 2.0x).</li>
     </ul>
-
   </main>
-
-  <!-- ===================== AdSense Slot #2 (safe placement) ===================== -->
-  <section class="adsense-wrap" aria-label="Advertisement">
-    <div class="adsense-card">
-      <div class="adsense-label">Advertisement</div>
-      <ins class="adsbygoogle"
-           style="display:block"
-           data-ad-client="ca-pub-6348292037303976"
-           data-ad-slot="9876543210"
-           data-ad-format="auto"
-           data-full-width-responsive="true"></ins>
-    </div>
-  </section>
 
   <footer class="site-footer">
     <div class="site-footer__inner">
@@ -586,18 +518,6 @@
         msgEl.value = '';
         emailEl.value = '';
       });
-    })();
-  </script>
-
-  <!-- AdSense init (safe; won't break if not approved yet) -->
-  <script>
-    (function(){
-      try {
-        (window.adsbygoogle = window.adsbygoogle || []).push({});
-        (window.adsbygoogle = window.adsbygoogle || []).push({});
-      } catch(e) {
-        // silently ignore (AdSense not ready / blocked / not approved yet)
-      }
     })();
   </script>
 
