--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="canonical" href="https://anamorphic-desqueeze.com/" />
   <meta name="robots" content="index,follow" />
 
-  <!-- ✅ AdSense account verification (required by Google in many setups) -->
+  <!-- ✅ AdSense account verification -->
   <meta name="google-adsense-account" content="ca-pub-6348292037303976" />
 
   <!-- GA4 -->
@@ -23,14 +23,13 @@
     gtag('config', 'G-6BFDRLKVZK');
   </script>
 
-  <!-- ✅ Google AdSense (loader - keep only once) -->
+  <!-- ✅ Google AdSense loader (keep only once in entire site) -->
   <script async
     src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6348292037303976"
     crossorigin="anonymous"></script>
 
   <link rel="stylesheet" href="./style.css?v=3" />
 
-  <!-- Header / layout polish -->
   <style>
     :root {
       --bg: #000; --fg: #fff; --muted: rgba(255,255,255,.65);
@@ -52,17 +51,12 @@
       display:flex; gap:16px; align-items:center; justify-content:space-between;
       padding:12px 16px;
     }
-    .brand {
-      display:flex; align-items:center; gap:10px;
-      font-weight:700; letter-spacing:.2px;
-    }
-    .brand__dot {
-      width:10px; height:10px; border-radius:999px;
-      background:var(--accent); display:inline-block;
-    }
-    .nav { display:flex; gap:14px; align-items:center; }
+    .brand { display:flex; align-items:center; gap:10px; font-weight:700; letter-spacing:.2px; }
+    .brand__dot { width:10px; height:10px; border-radius:999px; background:var(--accent); display:inline-block; }
+    .nav { display:flex; gap:14px; align-items:center; flex-wrap:wrap; }
     .nav a { color:var(--muted); text-decoration:none; font-size:.95rem; }
     .nav a:hover { color:#fff; }
+
     .btn {
       display:inline-block; background:#000;
       border:1px solid var(--border);
@@ -73,10 +67,13 @@
     }
     .btn:hover { border-color:#555; }
     .btn--primary { border-color:var(--accent); }
+
     .hero .card h1 { margin-bottom:.25rem; }
     .hero .card .sub { color:var(--muted); }
+
     .feature-list { margin:.4rem 0 0 1.2rem; }
     .feature-list li { color: var(--muted); font-size:.95rem; margin:.25rem 0; }
+
     .site-footer { border-top:1px solid var(--border); margin-top:24px; }
     .site-footer__inner {
       max-width:1100px; margin:0 auto;
@@ -87,6 +84,7 @@
     .site-footer__links { display:flex; gap:14px; flex-wrap:wrap; }
     .site-footer__links a { color: var(--muted); text-decoration:none; }
     .site-footer__links a:hover { color:#fff; }
+
     .note { color: var(--muted); font-size:.9rem; }
     main.seo-copy {
       max-width:800px; margin:32px auto 0;
@@ -95,8 +93,7 @@
     }
     main.seo-copy h2 { color:#fff; font-size:1.2rem; margin-top:1.8rem; }
 
-    /* ===================== ADS LAYOUT FIX (NO style.css CHANGE) ===================== */
-    /* Default: ads are normal blocks (no overlap) */
+    /* ===================== HOUSE ADS (NO OVERLAP) ===================== */
     #house-ads {
       max-width:1200px;
       margin:14px auto 0;
@@ -144,25 +141,33 @@
       font-weight:600;
     }
 
-    /* Wide screens: turn them into fixed side panels */
     @media (min-width: 1500px) {
-      #house-ads { height: 0; padding: 0; margin: 0; } /* keep DOM but no space */
+      #house-ads { height: 0; padding: 0; margin: 0; }
       .house-ad { width: 280px; flex: 0 0 auto; }
-      #house-ad-left {
-        position: fixed;
-        top: 110px;
-        left: 14px;
-        z-index: 20;
-      }
-      #house-ad-right {
-        position: fixed;
-        top: 110px;
-        right: 14px;
-        z-index: 20;
-      }
+      #house-ad-left { position: fixed; top: 110px; left: 14px; z-index: 20; }
+      #house-ad-right { position: fixed; top: 110px; right: 14px; z-index: 20; }
+    }
+
+    /* ===================== AdSense containers (safe, no break) ===================== */
+    .adsense-wrap{
+      max-width:1200px;
+      margin:14px auto 0;
+      padding:0 1.5rem;
+    }
+    .adsense-card{
+      background: rgba(255,255,255,0.06);
+      border: 1px solid rgba(255,255,255,0.10);
+      border-radius: 16px;
+      padding: 10px 12px;
+    }
+    .adsense-label{
+      color: rgba(255,255,255,0.55);
+      font-size: 0.8rem;
+      margin: 0 0 6px 4px;
     }
   </style>
 </head>
+
 <body>
 
   <!-- ===================== TOP ASO TEXT ===================== -->
@@ -246,7 +251,21 @@
     </div>
   </section>
 
-  <!-- ===================== HOUSE ADS (ALWAYS VISIBLE, NO OVERLAP) ===================== -->
+  <!-- ===================== AdSense Slot (optional; safe even during review) ===================== -->
+  <!-- IMPORTANT: Replace data-ad-slot with your REAL slot ID after AdSense approval -->
+  <section class="adsense-wrap" aria-label="Advertisement">
+    <div class="adsense-card">
+      <div class="adsense-label">Advertisement</div>
+      <ins class="adsbygoogle"
+           style="display:block"
+           data-ad-client="ca-pub-6348292037303976"
+           data-ad-slot="REPLACE_WITH_REAL_SLOT_ID"
+           data-ad-format="auto"
+           data-full-width-responsive="true"></ins>
+    </div>
+  </section>
+
+  <!-- ===================== HOUSE ADS (ALWAYS VISIBLE) ===================== -->
   <div id="house-ads" aria-label="Promotions">
     <div id="house-ad-left" class="house-ad">
       <div style="font-weight:800;font-size:1.05rem;">Web Desqueeze Studio</div>
@@ -254,280 +273,4 @@
         Online anamorphic de-squeeze tool for photos &amp; videos.<br>
         Supports 1.33× · 1.5× · 1.8× · 2.0×
       </p>
-      <a class="cta" href="https://anamorphic-desqueeze.com/" target="_blank" rel="noopener">Use Online Tool</a>
-    </div>
-
-    <div id="house-ad-right" class="house-ad">
-      <div style="font-weight:800;font-size:1.05rem;">Mobile Apps</div>
-      <p>
-        De-squeeze anamorphic footage on the go.<br>
-        Real-time preview &amp; batch export.
-      </p>
-      <a class="btnlink" href="https://apps.apple.com/za/app/anamorphicdesqueezer/id6757354068" target="_blank" rel="noopener">Download on iOS</a>
-      <a class="btnlink" href="https://play.google.com/store/apps/details?id=com.squeezer.app" target="_blank" rel="noopener">Get on Android</a>
-      <a class="btnlink" href="https://play.google.com/store/apps/details?id=com.cinematiclens.desqueeze.live" target="_blank" rel="noopener">Cinematic Lens DeSqueeze</a>
-    </div>
-  </div>
-
-  <!-- Header -->
-  <header class="site-header">
-    <div class="site-header__inner">
-      <div class="brand">
-        <span class="brand__dot"></span>
-        <span>Web Desqueeze Studio</span>
-      </div>
-      <nav class="nav">
-        <a href="#settings">Settings</a>
-        <a href="#how-it-works">Guide</a>
-        <a href="#support">Support</a>
-      </nav>
-    </div>
-  </header>
-
-  <div class="wrapper">
-    <header class="hero">
-      <div class="card">
-        <h1>Anamorphic De-Squeeze Tool — Web Desqueeze Studio-Early Free Access</h1>
-        <p class="sub">
-          Preview horizontal de-squeeze; export fully corrected MP4/JPG/PNG — batch up to 10 files at once.
-        </p>
-      </div>
-    </header>
-
-    <main class="grid">
-      <!-- Monitor -->
-      <section class="panel monitor">
-        <div class="preview" id="previewBox">
-          <video id="video" playsinline controls preload="metadata" poster="preview.jpg"></video>
-          <canvas id="photoCanvas" class="hidden"></canvas>
-        </div>
-
-        <div class="controls">
-          <div class="actions">
-            <button id="play" class="start">Play</button>
-            <button id="pause" class="stop">Pause</button>
-            <button id="exportSelected" class="start" disabled>Export Selected</button>
-            <button id="exportBatch" class="start" disabled>Export Batch</button>
-            <span id="status" class="status" role="status" aria-live="polite">Idle</span>
-          </div>
-
-          <progress id="progressBar" value="0" max="100" class="hidden"></progress>
-
-          <div id="download" class="download hidden">
-            <a id="downloadLink" href="#" download>Download</a>
-          </div>
-
-          <div id="queue" class="queue hidden"></div>
-        </div>
-      </section>
-
-      <!-- Settings -->
-      <section class="panel" id="settings">
-        <div class="row">
-          <label>Files</label>
-          <div><small>Coming soon — seamless and secure file uploads to Amazon S3.</small></div>
-        </div>
-
-        <h2>Settings</h2>
-
-        <div class="row">
-          <label>Select Files</label>
-          <div>
-            <div style="display:flex; gap:8px; align-items:center; flex-wrap:wrap;">
-              <button id="clearAll" type="button" class="btn">Clear</button>
-              <input id="fileInput" type="file"
-                accept="video/*,image/*,.mts,.avi,.mov,.mp4,.png,.jpg,.jpeg" multiple />
-            </div>
-
-            <small>
-              You may select up to 10 files. (Per-file size limit: 1 MB to 5 MB for testing.)
-              For larger file processing, please contact us at
-              <a href="mailto:teamcentersap@gmail.com">teamcentersap@gmail.com</a>.
-            </small>
-          </div>
-        </div>
-
-        <div class="row">
-          <label>De-squeeze</label>
-          <div>
-            <select id="desqPreset">
-              <option value="1">None (1.00×)</option>
-              <option value="1.25">1.25×</option>
-              <option value="1.33">1.33× (Classic)</option>
-              <option value="1.5">1.50×</option>
-              <option value="1.8">1.80×</option>
-              <option value="2">2.00×</option>
-              <option value="custom">Custom…</option>
-            </select>
-            <input id="desqCustom" type="number" step="0.01" min="1" placeholder="Custom factor" class="hidden mt8" />
-            <small>Preview updates instantly; export uses the same factor.</small>
-          </div>
-        </div>
-
-        <div class="row">
-          <label>Video FPS</label>
-          <div>
-            <select id="fpsPreset">
-              <option value="copy" selected>Keep original</option>
-              <option value="24">24</option>
-              <option value="25">25</option>
-              <option value="30">30</option>
-              <option value="50">50</option>
-              <option value="60">60</option>
-            </select>
-          </div>
-        </div>
-
-        <div class="row">
-          <label>Video Bitrate</label>
-          <div>
-            <select id="bitratePreset">
-              <option value="8000000" selected>8 Mbps</option>
-              <option value="12000000">12 Mbps</option>
-              <option value="16000000">16 Mbps</option>
-              <option value="25000000">25 Mbps</option>
-            </select>
-          </div>
-        </div>
-
-        <div class="row">
-          <label>Photo Format</label>
-          <div>
-            <select id="photoFormat">
-              <option value="image/jpeg" selected>JPEG</option>
-              <option value="image/png">PNG</option>
-            </select>
-          </div>
-        </div>
-
-        <div class="row" style="display:none">
-          <label>Upload URL</label>
-          <input id="uploadUrl" type="text" value="https://desqueeze-server-render.onrender.com/upload" />
-        </div>
-      </section>
-
-      <!-- Pro -->
-      <section class="panel" id="pro">
-        <h2>Advanced Features (Currently Free)</h2>
-        <div class="row">
-          <label>What you get</label>
-          <div>
-            <ul class="feature-list">
-              <li>2.0× de-squeeze is available for everyone</li>
-              <li>Other ratios & advanced controls available in this web tool</li>
-              <li>Batch up to 10 videos/photos at once</li>
-              <li>Faster exports & ongoing updates</li>
-            </ul>
-          </div>
-        </div>
-      </section>
-
-      <!-- Support -->
-      <section class="panel" id="support">
-        <h2>Support</h2>
-        <div class="row">
-          <label>Feedback</label>
-          <div>
-            <form id="feedbackForm" class="feedback-box" onsubmit="return false;">
-              <textarea id="feedbackMessage" class="feedback-input" rows="4" placeholder="Tell us what's confusing, what's broken, or what you'd love to see…"></textarea>
-              <div class="feedback-actions">
-                <input id="feedbackEmail" class="feedback-email" type="email" placeholder="Your email (optional)" />
-                <button id="sendFeedback" class="btn" type="button">Send Feedback</button>
-              </div>
-              <small id="feedbackHint" class="note">We’ll open the feedback page with your message pre-filled.</small>
-            </form>
-          </div>
-        </div>
-      </section>
-    </main>
-  </div>
-
-  <main class="seo-copy" id="how-it-works">
-    <h1>Anamorphic De-Squeeze Tool Online — Web Desqueeze Studio</h1>
-
-    <h2>What is anamorphic de-squeeze and why fix distortion?</h2>
-    <p>
-      <strong>Anamorphic lenses</strong> squeeze the image horizontally to capture a wider field of view on a normal sensor.
-      This unique look is popular with professional filmmakers and those utilizing affordable <strong>mobile anamorphic lenses</strong>
-      (like those from Moment, Sirui, or Moondog Labs) on their iPhone or Android devices.
-      Without de-squeezing, footage looks tall and skinny. This <strong>online anamorphic de-squeeze tool</strong> fixes the
-      <span translate="no">anamorphic distortion</span>, stretching the footage back to its intended <strong>cinematic aspect ratio</strong>
-      (e.g., 2.39:1) so your shots look professional instead of stretched.
-    </p>
-
-    <h2>How to De-Squeeze Photos and Videos Online (Batch Processing)</h2>
-    <p>
-      Our web studio makes it easy to use this <strong>anamorphic video editor online</strong>, right in your browser, no downloads required.
-      We support <strong>batch processing</strong> of up to 10 files at once for efficiency.
-    </p>
-
-    <h3>Supported Formats & Key Features:</h3>
-    <ul>
-      <li>Preview horizontal de-squeeze in real-time.</li>
-      <li>Export fully corrected MP4, JPG, and PNG files.</li>
-      <li>Batch process up to 10 files simultaneously.</li>
-      <li>Manual input for various squeeze factors (1.33x, 1.55x, 2.0x).</li>
-    </ul>
-  </main>
-
-  <footer class="site-footer">
-    <div class="site-footer__inner">
-      <div>© <span id="y"></span> Web Desqueeze Studio</div>
-      <div class="site-footer__links">
-        <a href="#settings">Settings</a>
-        <a href="#how-it-works">Guide</a>
-        <a href="#support">Support</a>
-      </div>
-    </div>
-  </footer>
-
-  <!-- JSZip for batch ZIP -->
-  <script src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
-
-  <!-- Feedback helper -->
-  <script>
-    (function(){
-      document.getElementById('y').textContent = new Date().getFullYear();
-
-      const btn = document.getElementById('sendFeedback');
-      const msgEl = document.getElementById('feedbackMessage');
-      const emailEl = document.getElementById('feedbackEmail');
-      const hint = document.getElementById('feedbackHint');
-      if (!btn) return;
-
-      btn.addEventListener('click', function(){
-        const msg = (msgEl.value || '').trim();
-        if (!msg) {
-          hint.textContent = 'Please enter your message before sending.';
-          return;
-        }
-
-        const email = (emailEl.value || '').trim();
-        const prefill = `Message: ${msg}${email ? `\n\nEmail: ${email}` : ''}`;
-
-        try {
-          navigator.clipboard &&
-            navigator.clipboard.writeText(prefill).catch(function(){});
-        } catch(e) {}
-
-        const formUrl = 'https://docs.google.com/forms/d/e/1FAIpQLSeZEIzfe-UMKQntHC97awMG_uO74tx3XR9CboLh-wByuPzT6A/viewform?usp=preview';
-
-        window.open(formUrl, '_blank', 'noopener');
-
-        hint.textContent = 'Opening feedback form in a new tab. Your message was copied to the clipboard.';
-        msgEl.value = '';
-        emailEl.value = '';
-      });
-    })();
-  </script>
-
-  <div id="app"></div>
-
-  <footer id="privacy-footer" style="text-align: center; font-size: 0.8rem; color: #9ca3af; margin-top: 2rem;">
-    We do not store your videos. All uploaded files are automatically deleted from our server after processing.
-  </footer>
-
-  <!-- App logic -->
-  <script src="./app.js?v=3"></script>
-</body>
-</html>
+      <a
