--- a/index.html
+++ b/index.html
@@ -273,4 +273,297 @@
         Online anamorphic de-squeeze tool for photos &amp; videos.<br>
         Supports 1.33× · 1.5× · 1.8× · 2.0×
       </p>
-      <a
+      <a class="cta" href="https://anamorphic-desqueeze.com/" target="_blank" rel="noopener">Use Online Tool</a>
+    </div>
+
+    <div id="house-ad-right" class="house-ad">
+      <div style="font-weight:800;font-size:1.05rem;">Mobile Apps</div>
+      <p>
+        De-squeeze anamorphic footage on the go.<br>
+        Real-time preview &amp; batch export.
+      </p>
+      <a class="btnlink" href="https://apps.apple.com/za/app/anamorphicdesqueezer/id6757354068" target="_blank" rel="noopener">Download on iOS</a>
+      <a class="btnlink" href="https://play.google.com/store/apps/details?id=com.squeezer.app" target="_blank" rel="noopener">Get on Android</a>
+      <a class="btnlink" href="https://play.google.com/store/apps/details?id=com.cinematiclens.desqueeze.live" target="_blank" rel="noopener">Cinematic Lens DeSqueeze</a>
+    </div>
+  </div>
+
+  <!-- Header -->
+  <header class="site-header">
+    <div class="site-header__inner">
+      <div class="brand">
+        <span class="brand__dot"></span>
+        <span>Web Desqueeze Studio</span>
+      </div>
+      <nav class="nav">
+        <a href="#settings">Settings</a>
+        <a href="#how-it-works">Guide</a>
+        <a href="#support">Support</a>
+        <!-- ✅ Trust links for AdSense & users -->
+        <a href="/privacy.html">Privacy</a>
+        <a href="/terms.html">Terms</a>
+      </nav>
+    </div>
+  </header>
+
+  <div class="wrapper">
+    <header class="hero">
+      <div class="card">
+        <h1>Anamorphic De-Squeeze Tool — Web Desqueeze Studio-Early Free Access</h1>
+        <p class="sub">
+          Preview horizontal de-squeeze; export fully corrected MP4/JPG/PNG — batch up to 10 files at once.
+        </p>
+      </div>
+    </header>
+
+    <main class="grid">
+      <!-- Monitor -->
+      <section class="panel monitor">
+        <div class="preview" id="previewBox">
+          <video id="video" playsinline controls preload="metadata" poster="preview.jpg"></video>
+          <canvas id="photoCanvas" class="hidden"></canvas>
+        </div>
+
+        <div class="controls">
+          <div class="actions">
+            <button id="play" class="start">Play</button>
+            <button id="pause" class="stop">Pause</button>
+            <button id="exportSelected" class="start" disabled>Export Selected</button>
+            <button id="exportBatch" class="start" disabled>Export Batch</button>
+            <span id="status" class="status" role="status" aria-live="polite">Idle</span>
+          </div>
+
+          <progress id="progressBar" value="0" max="100" class="hidden"></progress>
+
+          <div id="download" class="download hidden">
+            <a id="downloadLink" href="#" download>Download</a>
+          </div>
+
+          <div id="queue" class="queue hidden"></div>
+        </div>
+      </section>
+
+      <!-- Settings -->
+      <section class="panel" id="settings">
+        <div class="row">
+          <label>Files</label>
+          <div><small>Coming soon — seamless and secure file uploads to Amazon S3.</small></div>
+        </div>
+
+        <h2>Settings</h2>
+
+        <div class="row">
+          <label>Select Files</label>
+          <div>
+            <div style="display:flex; gap:8px; align-items:center; flex-wrap:wrap;">
+              <button id="clearAll" type="button" class="btn">Clear</button>
+              <input id="fileInput" type="file"
+                accept="video/*,image/*,.mts,.avi,.mov,.mp4,.png,.jpg,.jpeg" multiple />
+            </div>
+
+            <small>
+              You may select up to 10 files. (Per-file size limit: 1 MB to 5 MB for testing.)
+              For larger file processing, please contact us at
+              <a href="mailto:teamcentersap@gmail.com">teamcentersap@gmail.com</a>.
+            </small>
+          </div>
+        </div>
+
+        <div class="row">
+          <label>De-squeeze</label>
+          <div>
+            <select id="desqPreset">
+              <option value="1">None (1.00×)</option>
+              <option value="1.25">1.25×</option>
+              <option value="1.33">1.33× (Classic)</option>
+              <option value="1.5">1.50×</option>
+              <option value="1.8">1.80×</option>
+              <option value="2">2.00×</option>
+              <option value="custom">Custom…</option>
+            </select>
+            <input id="desqCustom" type="number" step="0.01" min="1" placeholder="Custom factor" class="hidden mt8" />
+            <small>Preview updates instantly; export uses the same factor.</small>
+          </div>
+        </div>
+
+        <div class="row">
+          <label>Video FPS</label>
+          <div>
+            <select id="fpsPreset">
+              <option value="copy" selected>Keep original</option>
+              <option value="24">24</option>
+              <option value="25">25</option>
+              <option value="30">30</option>
+              <option value="50">50</option>
+              <option value="60">60</option>
+            </select>
+          </div>
+        </div>
+
+        <div class="row">
+          <label>Video Bitrate</label>
+          <div>
+            <select id="bitratePreset">
+              <option value="8000000" selected>8 Mbps</option>
+              <option value="12000000">12 Mbps</option>
+              <option value="16000000">16 Mbps</option>
+              <option value="25000000">25 Mbps</option>
+            </select>
+          </div>
+        </div>
+
+        <div class="row">
+          <label>Photo Format</label>
+          <div>
+            <select id="photoFormat">
+              <option value="image/jpeg" selected>JPEG</option>
+              <option value="image/png">PNG</option>
+            </select>
+          </div>
+        </div>
+
+        <div class="row" style="display:none">
+          <label>Upload URL</label>
+          <input id="uploadUrl" type="text" value="https://desqueeze-server-render.onrender.com/upload" />
+        </div>
+      </section>
+
+      <!-- Pro -->
+      <section class="panel" id="pro">
+        <h2>Advanced Features (Currently Free)</h2>
+        <div class="row">
+          <label>What you get</label>
+          <div>
+            <ul class="feature-list">
+              <li>2.0× de-squeeze is available for everyone</li>
+              <li>Other ratios & advanced controls available in this web tool</li>
+              <li>Batch up to 10 videos/photos at once</li>
+              <li>Faster exports & ongoing updates</li>
+            </ul>
+          </div>
+        </div>
+      </section>
+
+      <!-- Support -->
+      <section class="panel" id="support">
+        <h2>Support</h2>
+        <div class="row">
+          <label>Feedback</label>
+          <div>
+            <form id="feedbackForm" class="feedback-box" onsubmit="return false;">
+              <textarea id="feedbackMessage" class="feedback-input" rows="4" placeholder="Tell us what's confusing, what's broken, or what you'd love to see…"></textarea>
+              <div class="feedback-actions">
+                <input id="feedbackEmail" class="feedback-email" type="email" placeholder="Your email (optional)" />
+                <button id="sendFeedback" class="btn" type="button">Send Feedback</button>
+              </div>
+              <small id="feedbackHint" class="note">We’ll open the feedback page with your message pre-filled.</small>
+            </form>
+          </div>
+        </div>
+      </section>
+    </main>
+  </div>
+
+  <main class="seo-copy" id="how-it-works">
+    <h1>Anamorphic De-Squeeze Tool Online — Web Desqueeze Studio</h1>
+
+    <h2>What is anamorphic de-squeeze and why fix distortion?</h2>
+    <p>
+      <strong>Anamorphic lenses</strong> squeeze the image horizontally to capture a wider field of view on a normal sensor.
+      This unique look is popular with professional filmmakers and those utilizing affordable <strong>mobile anamorphic lenses</strong>
+      (like those from Moment, Sirui, or Moondog Labs) on their iPhone or Android devices.
+      Without de-squeezing, footage looks tall and skinny. This <strong>online anamorphic de-squeeze tool</strong> fixes the
+      <span translate="no">anamorphic distortion</span>, stretching the footage back to its intended <strong>cinematic aspect ratio</strong>
+      (e.g., 2.39:1) so your shots look professional instead of stretched.
+    </p>
+
+    <h2>How to De-Squeeze Photos and Videos Online (Batch Processing)</h2>
+    <p>
+      Our web studio makes it easy to use this <strong>anamorphic video editor online</strong>, right in your browser, no downloads required.
+      We support <strong>batch processing</strong> of up to 10 files at once for efficiency.
+    </p>
+
+    <h3>Supported Formats &amp; Key Features:</h3>
+    <ul>
+      <li>Preview horizontal de-squeeze in real-time.</li>
+      <li>Export fully corrected MP4, JPG, and PNG files.</li>
+      <li>Batch process up to 10 files simultaneously.</li>
+      <li>Manual input for various squeeze factors (1.33x, 1.55x, 2.0x).</li>
+    </ul>
+  </main>
+
+  <footer class="site-footer">
+    <div class="site-footer__inner">
+      <div>© <span id="y"></span> Web Desqueeze Studio</div>
+      <div class="site-footer__links">
+        <a href="#settings">Settings</a>
+        <a href="#how-it-works">Guide</a>
+        <a href="#support">Support</a>
+        <!-- ✅ Trust links (AdSense/publisher) -->
+        <a href="/privacy.html">Privacy</a>
+        <a href="/terms.html">Terms</a>
+        <a href="/how-to-desqueeze-1-33x.html">1.33× Guide</a>
+        <a href="/anamorphic-desqueeze-iphone.html">iPhone Guide</a>
+      </div>
+    </div>
+  </footer>
+
+  <!-- JSZip for batch ZIP (keep as you had) -->
+  <script src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
+
+  <!-- Feedback helper (unchanged behavior) -->
+  <script>
+    (function(){
+      document.getElementById('y').textContent = new Date().getFullYear();
+
+      const btn = document.getElementById('sendFeedback');
+      const msgEl = document.getElementById('feedbackMessage');
+      const emailEl = document.getElementById('feedbackEmail');
+      const hint = document.getElementById('feedbackHint');
+      if (!btn) return;
+
+      btn.addEventListener('click', function(){
+        const msg = (msgEl.value || '').trim();
+        if (!msg) {
+          hint.textContent = 'Please enter your message before sending.';
+          return;
+        }
+
+        const email = (emailEl.value || '').trim();
+        const prefill = `Message: ${msg}${email ? `\n\nEmail: ${email}` : ''}`;
+
+        try {
+          navigator.clipboard &&
+            navigator.clipboard.writeText(prefill).catch(function(){});
+        } catch(e) {}
+
+        const formUrl = 'https://docs.google.com/forms/d/e/1FAIpQLSeZEIzfe-UMKQntHC97awMG_uO74tx3XR9CboLh-wByuPzT6A/viewform?usp=preview';
+
+        window.open(formUrl, '_blank', 'noopener');
+
+        hint.textContent = 'Opening feedback form in a new tab. Your message was copied to the clipboard.';
+        msgEl.value = '';
+        emailEl.value = '';
+      });
+    })();
+  </script>
+
+  <div id="app"></div>
+
+  <footer id="privacy-footer" style="text-align: center; font-size: 0.8rem; color: #9ca3af; margin-top: 2rem;">
+    We do not store your videos. All uploaded files are automatically deleted from our server after processing.
+  </footer>
+
+  <!-- App logic (keep EXACTLY as-is) -->
+  <script src="./app.js?v=3"></script>
+
+  <!-- ✅ AdSense init (safe: won't throw even when in review) -->
+  <script>
+    (function(){
+      try {
+        (window.adsbygoogle = window.adsbygoogle || []).push({});
+      } catch(e) {}
+    })();
+  </script>
+</body>
+</html>
