--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <title>Anamorphic De-Squeeze Tool — Web Desqueeze Studio-Early Free Access</title>
   <meta name="description"
-        content="Free online anamorphic de-squeeze tool. Upload anamorphic photos or videos, choose your lens factor (1.33x, 1.5x, 1.8x, 2.0x) and export fully corrected MP4/JPG/PNG with batch support." />
+        content="Free online anamorphic de-squeeze tool. Upload anamorphic photos or videos, choose your lens factor (1.33x, 1.5x, 1.8x, 2.0x) and export fully corrected MP4/JPG/PNG with batch support. Also available on iOS and Windows Desktop EXE with CinemaScope options, ratio slider controls, batch tools, and custom factors like 1.6x." />
 
   <link rel="canonical" href="https://anamorphic-desqueeze.com/" />
   <meta name="robots" content="index,follow" />
@@ -92,6 +92,7 @@
       font-size:.95rem; padding:0 16px 32px;
     }
     main.seo-copy h2 { color:#fff; font-size:1.2rem; margin-top:1.8rem; }
+    main.seo-copy h3 { color:#fff; font-size:1.05rem; margin-top:1.2rem; }
 
     /* ===================== HOUSE ADS (NO OVERLAP) ===================== */
     #house-ads {
@@ -165,6 +166,9 @@
       font-size: 0.8rem;
       margin: 0 0 6px 4px;
     }
+
+    /* CTA row helper */
+    .cta-row { display:flex; gap:10px; flex-wrap:wrap; margin-top:10px; }
   </style>
 </head>
 
@@ -199,6 +203,23 @@
         <li>Batch process up to 10 files simultaneously.</li>
         <li>Manual input for various squeeze factors (1.33x, 1.55x, 2.0x).</li>
       </ul>
+
+      <!-- ✅ NEW: Sales CTA for Windows + iOS -->
+      <div style="color:#fff;font-weight:700;margin-top:12px;">Want the Windows EXE or iOS app?</div>
+      <div class="cta-row">
+        <a class="btn btn--primary"
+           href="mailto:teamcentersap@gmail.com?subject=Windows%20Anamorphic%20Desqueeze%20%E2%80%93%20Trial%20Request&body=Hello%2C%0D%0A%0D%0AI%20would%20like%20to%20request%20a%20trial%20version%20of%20the%20Windows%20Anamorphic%20Desqueeze%20Desktop%20tool.%0D%0A%0D%0AUse%20case%3A%20%0D%0ALens%20ratio(s)%20needed%3A%20(e.g.%201.6x)%0D%0AWindows%20version%3A%20(10%2F11)%0D%0A%0D%0AThank%20you.">
+          Request Windows Trial (EXE)
+        </a>
+        <a class="btn"
+           href="https://apps.apple.com/za/app/anamorphicdesqueezer/id6757354068"
+           target="_blank" rel="noopener">
+          Get iOS App
+        </a>
+      </div>
+      <div class="note" style="margin-top:8px;">
+        Trial is shared via email for evaluation. Paid version is delivered via Gmail after payment.
+      </div>
     </div>
   </section>
 
@@ -209,7 +230,7 @@
 
       <p style="margin:10px 0 0;">
         DeSqueeze Studio provides a complete suite of professional anamorphic de-squeeze tools designed for filmmakers, cinematographers, and creative studios.
-        Our platform delivers accurate, high-quality lens correction across Web, iOS, and Android, ensuring consistent results on every device.
+        Our platform delivers accurate, high-quality lens correction across Web, iOS, Android, and Windows Desktop, ensuring consistent results on every device.
       </p>
 
       <p style="margin:10px 0 0;">
@@ -226,7 +247,7 @@
 
         <li style="margin-top:6px;">
           <strong style="color:#fff;">iOS App:</strong>
-          Professional de-squeeze tools optimized for iPhone and iPad workflows.
+          CinemaScope options, ratio slider control, live de-squeeze & post de-squeeze, batch processing, and live/post FPS options.
           <a href="https://apps.apple.com/za/app/anamorphicdesqueezer/id6757354068" target="_blank" rel="noopener" style="color:#93c5fd;">Download on the App Store</a>
         </li>
 
@@ -236,6 +257,13 @@
           <a href="https://play.google.com/store/apps/details?id=com.squeezer.app" target="_blank" rel="noopener" style="color:#93c5fd;">Get DeSqueeze Studio</a>
           |
           <a href="https://play.google.com/store/apps/details?id=com.cinematiclens.desqueeze.live" target="_blank" rel="noopener" style="color:#93c5fd;">Get Cinematic Lens DeSqueeze</a>
+        </li>
+
+        <!-- ✅ NEW: Windows Desktop tool listing -->
+        <li style="margin-top:6px;">
+          <strong style="color:#fff;">Windows Desktop (EXE):</strong>
+          One-tap batch de-squeeze for photos & videos + custom factors (example: 1.6x) when not available in the market.
+          <a href="#windows-desktop-tool" style="color:#93c5fd;">Request trial via email</a>
         </li>
 
         <li style="margin-top:6px;">
@@ -277,14 +305,17 @@
     </div>
 
     <div id="house-ad-right" class="house-ad">
-      <div style="font-weight:800;font-size:1.05rem;">Mobile Apps</div>
+      <div style="font-weight:800;font-size:1.05rem;">Apps + Desktop</div>
       <p>
-        De-squeeze anamorphic footage on the go.<br>
-        Real-time preview &amp; batch export.
+        iOS + Android apps for mobile filmmaking.<br>
+        Windows EXE for 1-tap batch + custom ratios (e.g., 1.6x).
       </p>
       <a class="btnlink" href="https://apps.apple.com/za/app/anamorphicdesqueezer/id6757354068" target="_blank" rel="noopener">Download on iOS</a>
       <a class="btnlink" href="https://play.google.com/store/apps/details?id=com.squeezer.app" target="_blank" rel="noopener">Get on Android</a>
       <a class="btnlink" href="https://play.google.com/store/apps/details?id=com.cinematiclens.desqueeze.live" target="_blank" rel="noopener">Cinematic Lens DeSqueeze</a>
+      <a class="btnlink"
+         href="mailto:teamcentersap@gmail.com?subject=Windows%20Anamorphic%20Desqueeze%20%E2%80%93%20Trial%20Request"
+         rel="noopener">Request Windows Trial</a>
     </div>
   </div>
 
@@ -298,6 +329,8 @@
       <nav class="nav">
         <a href="#settings">Settings</a>
         <a href="#how-it-works">Guide</a>
+        <a href="#ios-app">iOS App</a>
+        <a href="#windows-desktop-tool">Windows EXE</a>
         <a href="#support">Support</a>
         <!-- ✅ Trust links for AdSense & users -->
         <a href="/privacy.html">Privacy</a>
@@ -490,6 +523,61 @@
       <li>Batch process up to 10 files simultaneously.</li>
       <li>Manual input for various squeeze factors (1.33x, 1.55x, 2.0x).</li>
     </ul>
+
+    <!-- ✅ NEW: iOS SEO block -->
+    <section id="ios-app">
+      <h2>iOS Anamorphic De-Squeeze App (iPhone &amp; iPad)</h2>
+      <p>
+        The <strong>Anamorphic DeSqueezer iOS app</strong> is built for mobile filmmakers and supports fast, accurate workflows on iPhone and iPad.
+        It includes <strong>CinemaScope-style options</strong>, a <strong>slider-based ratio selector</strong>, and tools for both <strong>live de-squeeze</strong> and <strong>post de-squeeze</strong>.
+      </p>
+
+      <h3>Key iOS features</h3>
+      <ul>
+        <li><strong>CinemaScope options</strong> to match cinematic framing needs</li>
+        <li><strong>Ratio slider</strong> to fine-tune the de-squeeze factor (not limited to presets)</li>
+        <li><strong>Live de-squeeze</strong> preview while shooting</li>
+        <li><strong>Post de-squeeze</strong> mode for existing videos</li>
+        <li><strong>Different FPS options</strong> for Live and Post workflows</li>
+        <li><strong>Batch de-squeeze</strong> for processing multiple items quickly</li>
+      </ul>
+
+      <p>
+        <a href="https://apps.apple.com/za/app/anamorphicdesqueezer/id6757354068"
+           target="_blank" rel="noopener" style="color:#93c5fd;">
+          Download on the App Store
+        </a>
+      </p>
+    </section>
+
+    <!-- ✅ NEW: Windows Desktop SEO block -->
+    <section id="windows-desktop-tool">
+      <h2>Windows Desktop Anamorphic De-Squeeze Tool (EXE) — Custom Ratios + 1-Tap Batch</h2>
+      <p>
+        For studios and customers who need <strong>offline processing</strong>, <strong>custom squeeze factors</strong> (example: <strong>1.6x</strong>),
+        and <strong>one-tap batch processing</strong>, we provide a Windows Desktop version delivered as an <strong>EXE / ZIP</strong>.
+      </p>
+
+      <h3>Why Windows Desktop?</h3>
+      <ul>
+        <li>Custom ratios (example: 1.6x) that may not be available in the market</li>
+        <li>One-tap batch processing for multiple videos/images</li>
+        <li>Offline workflow — no internet required</li>
+        <li>Delivered to customers as EXE/ZIP for easy installation</li>
+      </ul>
+
+      <h3>Trial & purchase flow</h3>
+      <p>
+        We share a <strong>trial version</strong> on request via email. If it fits your workflow, the <strong>paid version</strong> is delivered via Gmail after payment.
+      </p>
+
+      <p>
+        <strong>Request a trial:</strong>
+        <a href="mailto:teamcentersap@gmail.com?subject=Windows%20Anamorphic%20Desqueeze%20%E2%80%93%20Trial%20Request"
+           style="color:#93c5fd;">teamcentersap@gmail.com</a>
+      </p>
+    </section>
+
   </main>
 
   <footer class="site-footer">
@@ -498,6 +586,8 @@
       <div class="site-footer__links">
         <a href="#settings">Settings</a>
         <a href="#how-it-works">Guide</a>
+        <a href="#ios-app">iOS App</a>
+        <a href="#windows-desktop-tool">Windows EXE</a>
         <a href="#support">Support</a>
         <!-- ✅ Trust links (AdSense/publisher) -->
         <a href="/privacy.html">Privacy</a>
