--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@ adsense-wrap{
       <p>
         <strong>Request a trial:</strong>
         <a href="mailto:teamcentersap@gmail.com?subject=Windows%20Anamorphic%20Desqueeze%20%E2%80%93%20Trial%20Request"
-           style="color:#93c5fd;">teamcentersap@gmail.com</a>
+           style="color:#93c5fd;"></a>
       </p>
     </section>
 
