--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@ adsense-wrap{
 
       <p>
         <strong>Request a trial:</strong>
-        <a href="mailto:teamcentersap@gmail.com?subject=Windows%20Anamorphic%20Desqueeze%20%E2%80%93%20Trial%20Request"
+        <a href="mailto:skorsan1980@gmail.com?subject=Windows%20Anamorphic%20Desqueeze%20%E2%80%93%20Trial%20Request"
            style="color:#93c5fd;"></a>
       </p>
     </section>
