--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- ===================== SEO CORE ===================== -->
-  <title>Anamorphic De-Squeeze Tool (Web + iOS + Windows) — DeSqueeze Studio | ₹8,000 Windows App</title>
+  <!-- ===================== SEO CORE (NO PRICE) ===================== -->
+  <title>Anamorphic De-Squeeze Tool (Web + iOS + Windows) — DeSqueeze Studio</title>
   <meta name="description"
-        content="Anamorphic de-squeeze tool for photos & videos. Use Web Desqueeze Studio online (batch up to 10), or install the iOS app and Windows app from Microsoft Store. Choose 1.33x, 1.5x, 1.8x, 2.0x or custom; preview instantly; export corrected MP4/JPG/PNG. Windows app price: ₹8,000." />
+        content="Anamorphic de-squeeze tool for photos & videos. Use Web Desqueeze Studio online (batch up to 10), or install the iOS app and Windows app from Microsoft Store. Choose 1.33x, 1.5x, 1.8x, 2.0x or custom; preview instantly; export corrected MP4/JPG/PNG." />
   <meta name="keywords"
         content="anamorphic desqueeze, anamorphic de-squeeze, desqueeze tool, 1.33x desqueeze, 1.5x desqueeze, 1.8x desqueeze, 2.0x desqueeze, cinemascope, 2.39:1, anamorphic converter, anamorphic aspect ratio converter, desqueeze mp4, desqueeze jpg, desqueeze png, batch desqueeze, windows anamorphic desqueeze, ios anamorphic desqueeze" />
   <link rel="canonical" href="https://anamorphic-desqueeze.com/" />
@@ -15,7 +15,7 @@
 
   <!-- Open Graph / Social -->
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Anamorphic De-Squeeze Tool — Web + iOS + Windows | ₹8,000 Windows App" />
+  <meta property="og:title" content="Anamorphic De-Squeeze Tool — Web + iOS + Windows" />
   <meta property="og:description" content="De-squeeze anamorphic photos & videos (1.33×/1.5×/1.8×/2.0×/custom). Preview instantly, export MP4/JPG/PNG, batch up to 10. Get the Windows app on Microsoft Store." />
   <meta property="og:url" content="https://anamorphic-desqueeze.com/" />
   <meta property="og:image" content="https://anamorphic-desqueeze.com/preview.jpg" />
@@ -40,7 +40,7 @@
 
   <link rel="stylesheet" href="./style.css?v=3" />
 
-  <!-- ✅ Structured Data: SoftwareApplication + Offer in INR + Store URL -->
+  <!-- ✅ Structured Data (NO PRICE / NO TRIAL) -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -50,14 +50,7 @@
     "operatingSystem": "Web, iOS, Windows",
     "description": "Anamorphic de-squeeze for photos and videos with live preview, batch export and custom squeeze factors.",
     "url": "https://anamorphic-desqueeze.com/",
-    "image": "https://anamorphic-desqueeze.com/preview.jpg",
-    "offers": {
-      "@type": "Offer",
-      "price": "8000",
-      "priceCurrency": "INR",
-      "availability": "https://schema.org/InStock",
-      "url": "https://apps.microsoft.com/detail/9ph01d6pq8x3?hl=en-GB&gl=IN"
-    }
+    "image": "https://anamorphic-desqueeze.com/preview.jpg"
   }
   </script>
 
@@ -203,19 +196,6 @@
 
     /* CTA row helper */
     .cta-row { display:flex; gap:10px; flex-wrap:wrap; margin-top:10px; }
-
-    /* Price pill */
-    .price-pill{
-      display:inline-flex; align-items:center; gap:8px;
-      border:1px solid rgba(255,255,255,0.18);
-      border-radius:999px;
-      padding:6px 12px;
-      font-weight:700;
-      color:#fff;
-      background:rgba(255,255,255,0.06);
-      margin-top:10px;
-    }
-    .price-pill small{ color:rgba(255,255,255,.65); font-weight:600; }
   </style>
 </head>
 
@@ -226,10 +206,6 @@
     <div style="background:rgba(255,255,255,0.06);border:1px solid rgba(255,255,255,0.10);border-radius:16px;padding:14px 16px;">
       <div style="color:#fff;font-weight:800;font-size:1.15rem;margin:0 0 6px 0;">
         Anamorphic De-Squeeze Tool Online — Web Desqueeze Studio
-      </div>
-
-      <div class="price-pill">
-        Windows App Price: ₹8,000 <small>(Microsoft Store)</small>
       </div>
 
       <div style="color:#fff;font-weight:700;margin-top:10px;">What is anamorphic de-squeeze and why fix distortion?</div>
@@ -258,7 +234,7 @@
         <a class="btn btn--primary"
            href="https://apps.microsoft.com/detail/9ph01d6pq8x3?hl=en-GB&gl=IN"
            target="_blank" rel="noopener">
-          Get Windows App (Microsoft Store) — ₹8,000
+          Get Windows App (Microsoft Store)
         </a>
 
         <a class="btn"
@@ -271,16 +247,10 @@
            target="_blank" rel="noopener">
           Get iOS App
         </a>
-
-        <!-- keep your existing trial route -->
-        <a class="btn btn--primary"
-           href="mailto:teamcentersap@gmail.com?subject=Windows%20Anamorphic%20Desqueeze%20%E2%80%93%20Trial%20Request&body=Hello%2C%0D%0A%0D%0AI%20would%20like%20to%20request%20a%20trial%20version%20of%20the%20Windows%20Anamorphic%20Desqueeze%20Desktop%20tool.%0D%0A%0D%0AUse%20case%3A%20%0D%0ALens%20ratio(s)%20needed%3A%20(e.g.%201.6x)%0D%0AWindows%20version%3A%20(10%2F11)%0D%0A%0D%0AThank%20you.">
-          Request Windows Trial (EXE)
-        </a>
       </div>
 
       <div class="note" style="margin-top:8px;">
-        Windows app is available via Microsoft Store (recommended). EXE trial is shared via email for evaluation.
+        Windows app is available via Microsoft Store (recommended).
       </div>
     </div>
   </section>
@@ -315,7 +285,7 @@
         </li>
 
         <li style="margin-top:6px;">
-          <strong style="color:#fff;">Windows (Microsoft Store) — ₹8,000:</strong>
+          <strong style="color:#fff;">Windows (Microsoft Store):</strong>
           Trusted install + easy updates.
           <a href="https://apps.microsoft.com/detail/9ph01d6pq8x3?hl=en-GB&gl=IN" target="_blank" rel="noopener" style="color:#93c5fd;">Get it on Microsoft Store</a>
           <span style="color:rgba(255,255,255,.35);"> | </span>
@@ -347,16 +317,13 @@
       <div style="font-weight:800;font-size:1.05rem;">Apps + Desktop</div>
       <p>
         iOS + Android apps for mobile filmmaking.<br>
-        Windows app on Microsoft Store (₹8,000).
+        Windows app on Microsoft Store.
       </p>
       <a class="btnlink" href="https://apps.apple.com/za/app/anamorphicdesqueezer/id6757354068" target="_blank" rel="noopener">Download on iOS</a>
-      <a class="btnlink" href="https://apps.microsoft.com/detail/9ph01d6pq8x3?hl=en-GB&gl=IN" target="_blank" rel="noopener">Get on Windows (Microsoft Store) — ₹8,000</a>
+      <a class="btnlink" href="https://apps.microsoft.com/detail/9ph01d6pq8x3?hl=en-GB&gl=IN" target="_blank" rel="noopener">Get on Windows (Microsoft Store)</a>
       <a class="btnlink" href="ms-windows-store://pdp/?productid=9PH01D6PQ8X3">Open in Store App (Windows)</a>
       <a class="btnlink" href="https://play.google.com/store/apps/details?id=com.squeezer.app" target="_blank" rel="noopener">Get on Android</a>
       <a class="btnlink" href="https://play.google.com/store/apps/details?id=com.cinematiclens.desqueeze.live" target="_blank" rel="noopener">Cinematic Lens DeSqueeze</a>
-      <a class="btnlink"
-         href="mailto:teamcentersap@gmail.com?subject=Windows%20Anamorphic%20Desqueeze%20%E2%80%93%20Trial%20Request"
-         rel="noopener">Request Windows Trial</a>
     </div>
   </div>
 
@@ -382,13 +349,13 @@
   <div class="wrapper">
     <header class="hero">
       <div class="card">
-        <h1>Anamorphic De-Squeeze Tool — Web + iOS + Windows (₹8,000)</h1>
+        <h1>Anamorphic De-Squeeze Tool — Web + iOS + Windows</h1>
         <p class="sub">
           Preview horizontal de-squeeze; export corrected MP4/JPG/PNG — batch up to 10 files.
         </p>
         <div class="cta-row" style="margin-top:12px;">
           <a class="btn btn--primary" href="https://apps.microsoft.com/detail/9ph01d6pq8x3?hl=en-GB&gl=IN" target="_blank" rel="noopener">
-            Install Windows App — ₹8,000
+            Install Windows App
           </a>
           <a class="btn" href="ms-windows-store://pdp/?productid=9PH01D6PQ8X3">
             Open in Store (Windows)
@@ -585,17 +552,16 @@
     </section>
 
     <section id="windows-desktop-tool">
-      <h2>Windows Anamorphic De-Squeeze App (Microsoft Store) — ₹8,000</h2>
+      <h2>Windows Anamorphic De-Squeeze App (Microsoft Store)</h2>
       <p>
         Install the Windows version from Microsoft Store for trusted installation and updates.
-        Price: <strong>₹8,000</strong>.
       </p>
 
       <h3>Get it</h3>
       <ul>
         <li>
           <a href="https://apps.microsoft.com/detail/9ph01d6pq8x3?hl=en-GB&gl=IN" target="_blank" rel="noopener" style="color:#93c5fd;">
-            Install from Microsoft Store (₹8,000)
+            Install from Microsoft Store
           </a>
         </li>
         <li>
@@ -604,10 +570,6 @@
           </a>
         </li>
       </ul>
-
-      <p class="note">
-        Need a trial EXE or custom studio build? Request via email above.
-      </p>
     </section>
   </main>
 
